--- a/app/assets/new-Manage-view.html
+++ b/app/assets/new-Manage-view.html
@@ -103,7 +103,29 @@
 
 
 
-    <div class="manage-right-content" id="manage-right-content">
+
+    <div class="manage-user-add" id="manage-entity-add" special="entity">
+        <i class="icon-remove" id="close-add-entity" ></i>
+
+
+    </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="manage-right-content" id="manage-right-content">
         <div class="manage-btn-group" id="manage-btn-group" special="view">
             <a class="btn btn-primary" id="entity-add-show"><i class="icon-plus"></i> User Group</a>
             <p id="manage-edit-target" ></p>
@@ -127,28 +149,9 @@
                 </li>
             </ul>
         </div>
-    </div>
+</div>
 
 
-
-    <div class="assign-kpi-options"  id="assign-kpi-options">
-        <i class="icon-remove" id="close-assign-kpi-options"></i>
-
-        <ul id="assign-kpi-list">
-            <li>
-                <h3 kpi_id="kk1">KPI 1</h3>
-                <p>some description here</p>
-            </li>
-            <li>
-                <h3 kpi_id="kk2">KPI 1</h3>
-                <p>some description here</p>
-            </li>
-            <li>
-                <h3 kpi_id="kk3">KPI 1</h3>
-                <p>some description here</p>
-            </li>
-        </ul>
-    </div>
 
 
 
