--- a/app/assets/new-Manage-view.html
+++ b/app/assets/new-Manage-view.html
@@ -106,8 +106,21 @@
 
     <div class="manage-user-add" id="manage-entity-add" special="entity">
         <i class="icon-remove" id="close-add-entity" ></i>
-
-
+        <p>UserGroup List</p>
+        <ul>
+            <li>
+                <h3 id="11">User Group11</h3>
+            </li>
+            <li>
+                <h3 id="21">User Group21</h3>
+            </li>
+            <li>
+                <h3 id="31">User Group31</h3>
+            </li>
+            <li>
+                <h3 id="41">User Group41</h3>
+            </li>
+        </ul>
     </div>
 
 
@@ -133,7 +146,7 @@
             <input type="text"/>
             <span>Enter:Confirm&nbsp;&nbsp;&nbsp;&nbsp;Esc:Cancel</span>
         </div>
-        <div class="assign-entity-wrap">
+        <div class="assign-entity-wrap" id="assign-entity-wrap">
             <ul>
                 <li>
                     <h3 entity_id="1">User Group1</h3>
