--- a/app/assets/new-Manage-user.html
+++ b/app/assets/new-Manage-user.html
@@ -198,32 +198,16 @@
     <div id="assign-kpi" class="assign-kpi" special="user">
         <div class="assign-kpi-top">
             <a class="btn" id="assign-kpi-cancel">Close</a>
-            <a class="btn btn-primary" id="assign-kpi-pick"><i class="icon-key"></i> Pick KPI</a>
+            <a class="btn btn-primary" id="assign-kpi-pick"><i class="icon-key"></i> All KPIs</a>
             <p><span class="normal-blue"></span><span>'s KPI</span></p>
         </div>
         <div class="assign-kpi-inner" id="assign-kpi-inner">
             <ul class="left">
-                <!--<li id="kpi1">-->
-                    <!--<h3>KPI 1</h3>-->
-                    <!--<p>some description here</p>-->
-                    <!--<i class="icon-trash"></i>-->
-                <!--</li>-->
-                <!--<li id="kpi2">-->
-                    <!--<h3>KPI 1</h3>-->
-                    <!--<p>ddd</p>-->
-                    <!--<i class="icon-trash"></i>-->
-                <!--</li>-->
-                <!--<li id="kpi3">-->
-                    <!--<h3>KPI 1</h3>-->
-
-                    <!--<p>some description here</p>-->
-                    <!--<i class="icon-trash"></i>-->
-                <!--</li>-->
                 <li id="kpi1">
                     <table>
                         <tr>
                             <td>KPI 1</td>
-                            <td><input type="text"/></td>
+                            <td><input type="text" kpi_id="kpi1"/></td>
                         </tr>
                         <tr>
                             <td>some description here</td>
