--- a/app/assets/new-Dashboard.html
+++ b/app/assets/new-Dashboard.html
@@ -7,6 +7,9 @@
     <link href="stylesheets/font-awesome.min.css" rel="stylesheet">
     <link href="stylesheets/chosen.css" rel="stylesheet">
     <link href="stylesheets/aero.css" rel="stylesheet">
+    <link href="stylesheets/Manage.css" rel="stylesheet">
+    <link href="stylesheets/Manage-kpi.css" rel="stylesheet">
+    <link href="stylesheets/Dashboard.css" rel="stylesheet">
     <title>if kpi</title>
 </head>
 <body>
@@ -59,10 +62,48 @@
             </ul>
         </nav>
     </header>
+
+    <ul class="manage-left-menu" id="manage-left-menu" type="dashboard">
+        <li>DashBoard</li>
+        <li id="manage-menu-add">
+            <input type="text" />
+            <span><i class="icon-plus"></i> Category</span>
+            <p class="manage-add-tooltip">Enter: confirm <br />Esc: cancel</p>
+        </li>
+        <li class="active" title="Category1" number="1">
+            <i class="icon-trash icon-item"></i>
+            <a>Category1</a>
+        </li>
+        <li title="Category2" number="2">
+            <i class="icon-trash icon-item"></i>
+            <a >Category2</a>
+        </li>
+        <li title="Category3" number="3">
+            <i class="icon-trash icon-item"></i>
+            <a>Category3</a>
+        </li>
+    </ul>
+
+
+    <div class="manage-right-content" id="manage-right-content">
+        <div class="manage-btn-group" id="manage-btn-group">
+            <a href="new-Dashboard-add.html" class="btn btn-primary" id="kpi-add-show"><i class="icon-plus"></i> Dashboard</a>
+            <p id="manage-edit-target" ></p>
+            <i class="icon-pencil"></i>
+            <input type="text"/>
+            <span>Enter:Confirm&nbsp;&nbsp;&nbsp;&nbsp;Esc:Cancel</span>
+        </div>
+    </div>
+
+
+
+
 </article>
+
 <div class="message-box" id="MessageBox">
     <p></p>
 </div>
+
 <script src="javascripts/jquery-1.8.2.min.js"></script>
 <script src="javascripts/chosen.jquery.min.js"></script>
 <script src="javascripts/wayne-base.js"></script>
@@ -70,6 +111,14 @@
 <script src="javascripts/brilliantech.base.js"></script>
 <script src="javascripts/jquery.ba-resize.min.js"></script>
 <script src="javascripts/jquery.icheck.min.js"></script>
-<script src="javascripts/jquery.sortable.min.js"></script
+<script src="javascripts/jquery.sortable.min.js"></script>
+<script src="javascripts/Dashboard-init.js"></script>
+<script src="javascripts/Manage.js"></script>
+<script src="javascripts/Manage-left-menu.js"></script>
+<script>
+    $(document).ready(function(){
+        DASHBOARD.init();
+    })
+</script>
 </body>
 </html>
