--- a/app/assets/new-Dashboard-add.html
+++ b/app/assets/new-Dashboard-add.html
@@ -66,6 +66,14 @@
         </nav>
     </header>
 
+
+
+
+
+
+
+
+
     <ul class="dashboard-add-left-menu">
         <li>Add DashBoard</li>
         <div class="select-div">
@@ -113,13 +121,20 @@
                 Average
             </label>
         </div>
-        <a class="btn" id="db-add-chart">add chart</a>
+        <a class="btn btn-primary" id="db-add-chart">add chart</a>
     </ul>
+
+
+
+
+
+
+
 
 
     <div class="manage-right-content" id="manage-right-content">
         <div class="dash-add-condition">
-           <a class="btn"><i class="icon-arrow-left"></i> Back</a>
+           <a class="btn" href="new-Dashboard.html"><i class="icon-arrow-left"></i> Back</a>
            <a class="btn btn-primary" style="display:none" id="add-dashboard"><i class="icon-plus"></i> Add DashBoard</a>
            <ul id="db-chart-type-alternate">
                <li class="line" type="line"></li>
@@ -144,6 +159,9 @@
             </div>
         </div>
     </div>
+
+
+
 
 
 
