--- a/app/assets/new-Dashboard-add.html
+++ b/app/assets/new-Dashboard-add.html
@@ -75,7 +75,13 @@
 
 
     <ul class="dashboard-add-left-menu">
-        <li>Add DashBoard</li>
+        <div class="dashboard-name clearfix" id="dashboard-name">
+            <p>Dashboard</p>
+            <i class="icon-pencil"></i>
+            <br />
+            <p>Name</p>
+        </div>
+        <input id="dashboard-name-edit" type="text" />
         <div class="select-div">
             <select data-placeholder="Entity *" style="width:120px;" class="chosen-select"
                     title="analy-entity-select" id="chart-group">
