+dashboard_item_add_view -dashboard_grid_view

--- a/app/assets/new-Dashboard.html
+++ b/app/assets/new-Dashboard.html
@@ -72,15 +72,15 @@
         </li>
         <li class="active" title="Category1" number="1">
             <i class="icon-trash icon-item"></i>
-            <a>Category1</a>
+            <a>Cate1</a>
         </li>
         <li title="Category2" number="2">
             <i class="icon-trash icon-item"></i>
-            <a >Category2</a>
+            <a >Cate2</a>
         </li>
         <li title="Category3" number="3">
             <i class="icon-trash icon-item"></i>
-            <a>Category3</a>
+            <a>Cate3</a>
         </li>
     </ul>
 
