--- a/app/assets/new-Dashboard-add.html
+++ b/app/assets/new-Dashboard-add.html
@@ -74,7 +74,11 @@
 
 
 
-    <ul class="dashboard-add-left-menu">
+
+
+
+
+    <ul class="dashboard-add-left-menu" id="dashboard-add-left-menu">
         <div class="dashboard-name clearfix" id="dashboard-name">
             <p>Dashboard</p>
             <i class="icon-pencil"></i>
@@ -140,7 +144,7 @@
 
     <div class="manage-right-content" id="manage-right-content">
         <div class="dash-add-condition">
-           <a class="btn" href="new-Dashboard.html"><i class="icon-arrow-left"></i> Back</a>
+           <a class="btn" id="add-back-db"><i class="icon-arrow-left"></i> Back</a>
            <a class="btn btn-primary" style="display:none" id="add-dashboard"><i class="icon-plus"></i> Add DashBoard</a>
            <ul id="db-chart-type-alternate">
                <li class="line" type="line"></li>
@@ -165,6 +169,16 @@
             </div>
         </div>
     </div>
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -198,6 +212,7 @@
 <script src="javascripts/Dashboard-add.js"></script>
 <script>
     $(document).ready(function(){
+        DASHBOARD.add.init();
         DASHBOARD.add.init();
     })
 </script>
