--- a/app/assets/new-Dashboard.html
+++ b/app/assets/new-Dashboard.html
@@ -9,7 +9,10 @@
     <link href="stylesheets/aero.css" rel="stylesheet">
     <link href="stylesheets/Manage.css" rel="stylesheet">
     <link href="stylesheets/Manage-kpi.css" rel="stylesheet">
+    <link href="stylesheets/datetimepicker.css" rel="stylesheet" media="screen">
+    <link href="stylesheets/datepicker.css" rel="stylesheet" media="screen">
     <link href="stylesheets/Dashboard.css" rel="stylesheet">
+    <link href="stylesheets/Dashboard-add.css" rel="stylesheet">
     <title>if kpi</title>
 </head>
 <body>
@@ -87,13 +90,131 @@
 
     <div class="manage-right-content" id="manage-right-content">
         <div class="manage-btn-group" id="manage-btn-group">
-            <a href="new-Dashboard-add.html" class="btn btn-primary" id="kpi-add-show"><i class="icon-plus"></i> Dashboard</a>
+            <a class="btn btn-primary" id="kpi-add-show"><i class="icon-plus"></i> Dashboard</a>
             <p id="manage-edit-target" ></p>
             <i class="icon-pencil"></i>
             <input type="text"/>
             <span>Enter:Confirm&nbsp;&nbsp;&nbsp;&nbsp;Esc:Cancel</span>
         </div>
     </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <div id="dashboard-add-page" class="dashboard-add-page">
+        <ul class="dashboard-add-left-menu"  id="dashboard-add-left-menu">
+            <div class="dashboard-name clearfix" id="dashboard-name">
+                <p>Dashboard</p>
+                <i class="icon-pencil"></i>
+                <br />
+                <p>Name</p>
+            </div>
+            <input id="dashboard-name-edit" type="text" />
+            <div class="select-div">
+                <select data-placeholder="Entity *" style="width:120px;" class="chosen-select"
+                        title="analy-entity-select" id="chart-group">
+                    <option value="group1">entity1</option>
+                    <option value="group2">entity2</option>
+                    <option value="group3">entity3</option>
+                </select>
+            </div>
+            <div class="select-div">
+                <select data-placeholder="Kpi *" style="width:120px;" class="chosen-select" title="analy-kpi-select"
+                        id="chart-kpi" date-pick=false>
+                    <option value=""> </option>
+                    <option value="kpi1" interval="200" type="">week</option>
+                    <option value="kpi1" interval="90">hour</option>
+                    <option value="kpi1" interval="100">day</option>
+                    <option value="kpi2" interval="400">quarter</option>
+                    <option value="kpi3" interval="300">month</option>
+                    <option value="kpi3" interval="500">year</option>
+                    <option value="kpi3" interval="">empty</option>
+                </select>
+            </div>
+            <div class="select-div">
+                <select data-placeholder="View *" style="width:120px;" class="chosen-select" title="analy-view-select"
+                        id="chart-view">
+                    <option value="entity1">view1</option>
+                    <option value="entity2">view2</option>
+                    <option value="entity3">view3</option>
+                </select>
+            </div>
+            <div class="time-select" id="time-select">
+                <input type="text" placeholder="Begin Time *" id="analy-begin-time" readonly=true />
+                <label class="index-date-extra-info"></label>
+                <input type="text" placeholder="End Time" id="analy-end-time" readonly=true />
+                <label class="index-date-extra-info"></label>
+            </div>
+            <div class="method-select">
+                <label class="analytics-radio-label">
+                    <input type="radio" name="chartRadios" value="1" checked>
+                    Total
+                </label>
+                <label class="analytics-radio-label">
+                    <input type="radio" name="chartRadios" value="2">
+                    Average
+                </label>
+            </div>
+            <a class="btn btn-primary" id="db-add-chart">add chart</a>
+        </ul>
+
+
+
+        <div class="manage-right-content">
+            <div class="dash-add-condition">
+                <a class="btn" href="new-Dashboard.html"><i class="icon-arrow-left"></i> Back</a>
+                <a class="btn btn-primary" style="display:none" id="add-dashboard"><i class="icon-plus"></i> Add DashBoard</a>
+                <ul id="db-chart-type-alternate">
+                    <li class="line" type="line"></li>
+                    <li class="column" type="column"></li>
+                    <li class="pie" type="pie"></li>
+                    <li class="scatter" type="scatter"></li>
+                </ul>
+            </div>
+
+            <div class="db-chart-body" id="db-chart-body" >
+                <div class="clearfix" id="db-chart-interval-alternate" my_height="28">
+                    <ul class="pull-right db-control-chart-interval-group">
+                        <li interval="90"><a>Hr</a></li>
+                        <li interval="100"><a>D</a></li>
+                        <li interval="200"><a>W</a></li>
+                        <li interval="300"><a>M</a></li>
+                        <li interval="400"><a>Qr</a></li>
+                        <li interval="500"><a>Y</a></li>
+                    </ul>
+                </div>
+                <div class="db-chart-container" id="chart-container">
+                </div>
+            </div>
+        </div>
+
+
+    </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -112,12 +233,20 @@
 <script src="javascripts/jquery.ba-resize.min.js"></script>
 <script src="javascripts/jquery.icheck.min.js"></script>
 <script src="javascripts/jquery.sortable.min.js"></script>
-<script src="javascripts/Dashboard-init.js"></script>
+<script src="javascripts/highcharts.js"></script>
+<script src="javascripts/exporting.js"></script>
+<script src="javascripts/bootstrap-datepicker.js" charset="UTF-8"></script>
+<script src="javascripts/bootstrap-datetimepicker.min.js" charset="UTF-8"></script>
+<script src="javascripts/date_picker_template.js"></script>
+<script src="javascripts/high_chart_template.js"></script>
 <script src="javascripts/Manage.js"></script>
 <script src="javascripts/Manage-left-menu.js"></script>
+<script src="javascripts/Dashboard-init.js"></script>
+<script src="javascripts/Dashboard-add.js"></script>
 <script>
     $(document).ready(function(){
         DASHBOARD.init();
+        DASHBOARD.add.init();
     })
 </script>
 </body>
