--- a/app/assets/new-Dashboard.html
+++ b/app/assets/new-Dashboard.html
@@ -174,7 +174,7 @@
 
         <div class="manage-right-content">
             <div class="dash-add-condition">
-                <a class="btn" href="new-Dashboard.html"><i class="icon-arrow-left"></i> Back</a>
+                <a class="btn" id="add-back-db"><i class="icon-arrow-left"></i> Back</a>
                 <a class="btn btn-primary" style="display:none" id="add-dashboard"><i class="icon-plus"></i> Add DashBoard</a>
                 <ul id="db-chart-type-alternate">
                     <li class="line" type="line"></li>
