--- a/app/assets/new-Dashboard.html
+++ b/app/assets/new-Dashboard.html
@@ -90,7 +90,7 @@
 
     <div class="manage-right-content" id="manage-right-content">
         <div class="manage-btn-group" id="manage-btn-group">
-            <a class="btn btn-primary kpi-add-show" id="db-add-show"><i class="icon-plus"></i> Dashboard</a>
+            <a class="btn btn-primary db-add-show" id="db-add-show"><i class="icon-plus"></i> Dashboard</a>
             <p id="manage-edit-target" ></p>
             <i class="icon-pencil"></i>
             <input type="text"/>
