--- a/app/assets/new-Manage-user.html
+++ b/app/assets/new-Manage-user.html
@@ -78,7 +78,7 @@
     <li>Manage User</li>
     <li id="manage-menu-add">
         <input type="text"/>
-        <span><i class="icon-plus"></i> Group</span>
+        <span><i class="icon-plus"></i> entity</span>
 
         <p class="manage-add-tooltip">Enter: confirm <br/>Esc: cancel</p>
     </li>
