--- a/app/assets/new-Manage-kpi.html
+++ b/app/assets/new-Manage-kpi.html
@@ -194,7 +194,7 @@
                             <td >KPI1</td>
                             <td >Hour</td>
                             <td >Up</td>
-                            <td class="manage-kpi-target"><span class="can-change">200</span><span>$</span><input type='text' effect_on="1"/></td>
+                            <td class="manage-kpi-target"><div><span class="can-change">200</span><span>$</span><input type='text' effect_on="1"/></div></td>
                             <td >No</td>
                         </tr>
                         <tr>
@@ -214,7 +214,7 @@
                             <td>KPI2</td>
                             <td>Year</td>
                             <td>Down</td>
-                            <td class="manage-kpi-target"><span class="can-change">100.20</span><span>$</span><input type='text' effect_on="2"/></td>
+                            <td class="manage-kpi-target"><div><span class="can-change">100.20</span><span>$</span><input type='text' effect_on="2"/></div></td>
                             <td>No</td>
                         </tr>
                         <tr>
@@ -234,7 +234,7 @@
                             <td>KPI3</td>
                             <td>Quarter</td>
                             <td>None</td>
-                            <td class="manage-kpi-target"><span class="can-change">20</span><span>$</span><input type='text' effect_on="2"/></td>
+                            <td class="manage-kpi-target"><div><span class="can-change">20</span><span>$</span><input type='text' effect_on="3"/></div></td>
                             <td>No</td>
                         </tr>
                         <tr>
