--- a/app/assets/new-Manage-kpi.html
+++ b/app/assets/new-Manage-kpi.html
@@ -194,7 +194,7 @@
                             <td >KPI1</td>
                             <td >Hour</td>
                             <td >Up</td>
-                            <td class="manage-kpi-target"><div><span class="can-change">200</span><span>$</span><input type='text' effect_on="1"/></div></td>
+                            <td class="manage-kpi-target"><div><span class="can-change">200</span><span>$</span><input id="wzx" type='text' effect_on="1"/></div></td>
                             <td >No</td>
                         </tr>
                         <tr>
