--- a/app/assets/new-Dashboard.html
+++ b/app/assets/new-Dashboard.html
@@ -13,15 +13,17 @@
     <link href="stylesheets/datepicker.css" rel="stylesheet" media="screen">
     <link href="stylesheets/Dashboard.css" rel="stylesheet">
     <link href="stylesheets/Dashboard-add.css" rel="stylesheet">
+    <link href="stylesheets/2_column_right_nav.css" rel="stylesheet">
+
     <title>if kpi</title>
 </head>
 <body>
-<aside class="left-user-setting" id="left-user-setting">
-    <div style="height:100%">
-        <a class="btn btn-primary btn-log-out">Log out</a>
-    </div>
+<!--<aside class="left-user-setting" id="left-user-setting">-->
+    <!--<div style="height:100%">-->
+        <!--<a class="btn btn-primary btn-log-out">Log out</a>-->
+    <!--</div>-->
 
-</aside>
+<!--</aside>-->
 <article class="wrap-main" id="wrap-main">
     <header>
         <div class="user-portrait-background pull-left" state="close" id="user-portrait-background">
@@ -68,39 +70,98 @@
                 </a></li>
             </ul>
         </nav>
+        <ul class="nav-user-part">
+            <li>
+                <i class="icon-user"></i>
+            </li>
+            <li class='empty'>
+                <span>&nbsp;</span>
+            </li>
+            <li>
+                <a>Log Out</a>
+            </li>
+        </ul>
     </header>
 
-    <ul class="manage-left-menu" id="manage-left-menu" type="dashboard">
-        <li>DashBoard</li>
-        <li id="manage-menu-add">
-            <input type="text" />
-            <span><i class="icon-plus"></i> Category</span>
-            <p class="manage-add-tooltip">Enter: confirm <br />Esc: cancel</p>
-        </li>
-        <li class="active" title="Category1" number="1">
-            <i class="icon-trash icon-item"></i>
-            <a>Cate1</a>
-        </li>
-        <li title="Category2" number="2">
-            <i class="icon-trash icon-item"></i>
-            <a >Cate2</a>
-        </li>
-        <li title="Category3" number="3">
-            <i class="icon-trash icon-item"></i>
-            <a>Cate3</a>
-        </li>
-    </ul>
 
 
-    <div class="manage-right-content" id="manage-right-content">
-        <div class="manage-btn-group" id="manage-btn-group">
-            <a class="btn btn-primary db-add-show" id="db-add-show"><i class="icon-plus"></i> Dashboard</a>
-            <p id="manage-edit-target" ></p>
-            <i class="icon-pencil"></i>
-            <input type="text"/>
-            <span>Enter:Confirm&nbsp;&nbsp;&nbsp;&nbsp;Esc:Cancel</span>
+
+
+    <!--<ul class="manage-left-menu" id="manage-left-menu" type="dashboard">-->
+        <!--<li>DashBoard</li>-->
+        <!--<li id="manage-menu-add">-->
+            <!--<input type="text" />-->
+            <!--<span><i class="icon-plus"></i> Category</span>-->
+            <!--<p class="manage-add-tooltip">Enter: confirm <br />Esc: cancel</p>-->
+        <!--</li>-->
+        <!--<li class="active" title="Category1" number="1">-->
+            <!--<i class="icon-trash icon-item"></i>-->
+            <!--<a>Cate1</a>-->
+        <!--</li>-->
+        <!--<li title="Category2" number="2">-->
+            <!--<i class="icon-trash icon-item"></i>-->
+            <!--<a >Cate2</a>-->
+        <!--</li>-->
+        <!--<li title="Category3" number="3">-->
+            <!--<i class="icon-trash icon-item"></i>-->
+            <!--<a>Cate3</a>-->
+        <!--</li>-->
+    <!--</ul>-->
+
+
+    <aside class="content-right-nav" name='dashboard' id="content-right-nav">
+        <section class="adaptable">
+            <h3>DashBoard Group</h3>
+            <i class="icon-plus"></i>
+            <ul id="content-right-nav-group">
+                <li class="active" title="DB1" number="1" >
+                    <a >DashBoard1</a>
+                    <i class="icon-remove"></i>
+                </li>
+                <li title="DB2" number="2">
+                    <a>DashBoard2</a>
+                    <i class="icon-remove"></i>
+                </li>
+                <li title="DB3" number="3">
+                    <a>DashBoard3</a>
+                    <i class="icon-remove"></i>
+                </li>
+            </ul>
+        </section>
+        <section class="solid">
+            <h3>Add DashBoard</h3>
+            <p>Creating a dashboard for your favorite type,then put it
+            to one of the dashboard group item for long-term observation</p>
+            <a class="btn btn-primary">Add Now</a>
+        </section>
+        <section class="solid">
+            <h3>Full Size</h3>
+            <p>Resize the dashboard in the left to full screen so that you
+            can demonstrate it to your colleagues or leaders ,use Esc to
+            bring it back</p>
+            <a class="btn btn-primary">Full Now</a>
+        </section>
+    </aside>
+
+
+    <div class="content-left-main" name="dashboard" id="content-left-main">
+        <div class="left-content-title" id="left-content-title">
+              <p id="current-group-item" class="current-group-item"></p>
+              <i class="icon-edit current-group-item-edit"></i>
         </div>
     </div>
+
+
+
+    <!--<div class="manage-right-content" id="manage-right-content">-->
+        <!--<div class="manage-btn-group" id="manage-btn-group">-->
+            <!--<a class="btn btn-primary db-add-show" id="db-add-show"><i class="icon-plus"></i> Dashboard</a>-->
+            <!--<p id="manage-edit-target" ></p>-->
+            <!--<i class="icon-pencil"></i>-->
+            <!--<input type="text"/>-->
+            <!--<span>Enter:Confirm&nbsp;&nbsp;&nbsp;&nbsp;Esc:Cancel</span>-->
+        <!--</div>-->
+    <!--</div>-->
 
 
 
@@ -244,10 +305,12 @@
 <script src="javascripts/Manage-left-menu.js"></script>
 <script src="javascripts/Dashboard-init.js"></script>
 <script src="javascripts/Dashboard-add.js"></script>
+<script src="javascripts/2_column_right_nav.js"></script>
 <script>
     $(document).ready(function(){
         DASHBOARD.init();
         DASHBOARD.add.init();
+        right_nav_main.init();
     })
 </script>
 </body>
