--- a/app/assets/new-Dashboard.html
+++ b/app/assets/new-Dashboard.html
@@ -34,13 +34,10 @@
             <ul>
                 <li><a>
                     <span>Get Started</span>
-                    <!--<span class="nav-get-started"></span>-->
                 </a></li>
-
                 <li class="relative">
                     <a>
                         <span>Manage</span>
-                        <!--<span class='nav-manage'></span>-->
                     </a>
                     <ul class="nav-manage-sub">
                         <li><a>KPIs</a></li>
@@ -49,24 +46,20 @@
                         <li><a>Billings</a></li>
                     </ul>
                 </li>
-                <li  class="active"><a>
+                <li class="active"><a>
                     <span>DashBoard</span>
-                    <!--<span class="nav-dash-board"></span>-->
                 </a></li>
                 <li><a href="new-Analytics.html">
                     <span>Analytics</span>
-                    <!--<span class="nav-analytics"></span>-->
                 </a></li>
                 <li><a>
                     <span>Reports</span>
-                    <!--<span class='nav-report'></span>-->
                 </a></li>
                 <li><a>
                    <span>&nbsp;</span>
                 </a></li>
                 <li><a>
                     <span>Entry KPIs</span>
-                    <!--<span class="nav-entry-kpi"></span>-->
                 </a></li>
             </ul>
         </nav>
@@ -85,52 +78,32 @@
 
 
 
-
-
-    <!--<ul class="manage-left-menu" id="manage-left-menu" type="dashboard">-->
-        <!--<li>DashBoard</li>-->
-        <!--<li id="manage-menu-add">-->
-            <!--<input type="text" />-->
-            <!--<span><i class="icon-plus"></i> Category</span>-->
-            <!--<p class="manage-add-tooltip">Enter: confirm <br />Esc: cancel</p>-->
-        <!--</li>-->
-        <!--<li class="active" title="Category1" number="1">-->
-            <!--<i class="icon-trash icon-item"></i>-->
-            <!--<a>Cate1</a>-->
-        <!--</li>-->
-        <!--<li title="Category2" number="2">-->
-            <!--<i class="icon-trash icon-item"></i>-->
-            <!--<a >Cate2</a>-->
-        <!--</li>-->
-        <!--<li title="Category3" number="3">-->
-            <!--<i class="icon-trash icon-item"></i>-->
-            <!--<a>Cate3</a>-->
-        <!--</li>-->
-    <!--</ul>-->
-
-
     <aside class="content-right-nav" name='dashboard' id="content-right-nav">
         <section class="adaptable">
             <h3>DashBoard Group</h3>
-            <i class="icon-plus"></i>
+            <i class="icon-plus" id="content-right-nav-add-button"></i>
             <ul id="content-right-nav-group">
-                <li class="active" title="DB1" number="1" >
+                <li class="active" title="DashBoard1" number="1" >
                     <a >DashBoard1</a>
                     <i class="icon-remove"></i>
                 </li>
-                <li title="DB2" number="2">
+                <li title="DashBoard2" number="2">
                     <a>DashBoard2</a>
                     <i class="icon-remove"></i>
                 </li>
-                <li title="DB3" number="3">
+                <li title="DashBoard3" number="3">
                     <a>DashBoard3</a>
                     <i class="icon-remove"></i>
                 </li>
             </ul>
+            <div class="content-right-nav-add-block" id="content-right-nav-add-block">
+                <p>give it a name</p>
+                <input type='text' />
+            </div>
         </section>
         <section class="solid">
             <h3>Add DashBoard</h3>
-            <p>Creating a dashboard for your favorite type,then put it
+            <p>Creating a dashboard of your favourite type,then put it
             to one of the dashboard group item for long-term observation</p>
             <a class="btn btn-primary">Add Now</a>
         </section>
@@ -147,21 +120,17 @@
     <div class="content-left-main" name="dashboard" id="content-left-main">
         <div class="left-content-title" id="left-content-title">
               <p id="current-group-item" class="current-group-item"></p>
-              <i class="icon-edit current-group-item-edit"></i>
+              <i class="icon-edit current-group-item-edit" id="current-group-item-edit"></i>
+              <div class="content-right-nav-add-block" name="left-content" id="content-left-content-edit-block">
+                <p>edit the name</p>
+                <input type='text' />
+              </div>
         </div>
     </div>
 
 
 
-    <!--<div class="manage-right-content" id="manage-right-content">-->
-        <!--<div class="manage-btn-group" id="manage-btn-group">-->
-            <!--<a class="btn btn-primary db-add-show" id="db-add-show"><i class="icon-plus"></i> Dashboard</a>-->
-            <!--<p id="manage-edit-target" ></p>-->
-            <!--<i class="icon-pencil"></i>-->
-            <!--<input type="text"/>-->
-            <!--<span>Enter:Confirm&nbsp;&nbsp;&nbsp;&nbsp;Esc:Cancel</span>-->
-        <!--</div>-->
-    <!--</div>-->
+
 
 
 
