--- a/app/assets/new-Analytics.html
+++ b/app/assets/new-Analytics.html
@@ -13,55 +13,59 @@
     <title>if kpi</title>
 </head>
 <body>
-<aside class="left-user-setting" id="left-user-setting">
-    <div style="height:100%">
-        <a class="btn btn-primary btn-log-out">Log out</a>
-    </div>
-</aside>
+
 
 <article class="wrap-main" id="wrap-main">
-    <header>
-        <div class="user-portrait-background pull-left" state="close" id="user-portrait-background">
-            <div class="user-portrait-brand"></div>
-            <!--<div class="user-portrait-name">IF-EPM</div>-->
-        </div>
-        <nav class="pull-left">
-            <ul>
-                <li><a>
-                    <span>Get Started</span>
-                    <span class="nav-get-started"></span>
-                </a></li>
-                <li><a>
-                    <span>DashBoard</span>
-                    <span class="nav-dash-board"></span>
-                </a></li>
-                <li><a href="new-Analytics.html">
-                    <span>Analytics</span>
-                    <span class="nav-analytics"></span>
-                </a></li>
-                <li><a>
-                    <span>Reports</span>
-                    <span class='nav-report'></span>
-                </a></li>
-                <li class="relative">
-                    <a>
-                        <span>Manage</span>
-                        <span class='nav-manage'></span>
-                    </a>
-                    <ul class="nav-manage-sub">
-                        <li><a>KPIs</a></li>
-                        <li><a>Users</a></li>
-                        <li><a>Views</a></li>
-                        <li><a>Billings</a></li>
-                    </ul>
-                </li>
-                <li><a>
-                    <span>Entry KPIs</span>
-                    <span class="nav-entry-kpi"></span>
-                </a></li>
-            </ul>
-        </nav>
-    </header>
+<header>
+    <div class="user-portrait-background pull-left" state="close" id="user-portrait-background">
+        <div class="user-portrait-brand"></div>
+        <!--<div class="user-portrait-name">IF-EPM</div>-->
+    </div>
+    <nav class="pull-left">
+        <ul>
+            <li><a>
+                <span>Get Started</span>
+            </a></li>
+            <li class="relative">
+                <a>
+                    <span>Manage</span>
+                </a>
+                <ul class="nav-manage-sub">
+                    <li><a>KPIs</a></li>
+                    <li><a>Users</a></li>
+                    <li><a>Views</a></li>
+                    <li><a>Billings</a></li>
+                </ul>
+            </li>
+            <li class="active"><a>
+                <span>DashBoard</span>
+            </a></li>
+            <li><a href="new-Analytics.html">
+                <span>Analytics</span>
+            </a></li>
+            <li><a>
+                <span>Reports</span>
+            </a></li>
+            <li><a>
+                <span>&nbsp;</span>
+            </a></li>
+            <li><a>
+                <span>Entry KPIs</span>
+            </a></li>
+        </ul>
+    </nav>
+    <ul class="nav-user-part">
+        <li>
+            <i class="icon-user"></i>
+        </li>
+        <li class='empty'>
+            <span>&nbsp;</span>
+        </li>
+        <li>
+            <a>Log Out</a>
+        </li>
+    </ul>
+</header>
 
 
 
