--- a/app/assets/new-Dashboard-add.html
+++ b/app/assets/new-Dashboard-add.html
@@ -86,15 +86,38 @@
     </div>
 
     <aside class="content-right-nav" name='dashboard-add' id="content-right-nav">
+        <section class="solid dashboard-add-name">
+            <h3>Add DashBoard Name</h3>
+            <p>Give the dashboard being created a proper name</p>
+            <input type='text' placeholder="Dashboard name"/>
+        </section>
+        <section class="solid dashboard-add-type">
+            <h3>Choose A Type</h3>
+            <ul>
+                <li class="active"></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+        </section>
         <section class="solid">
-            <h3>Add DashBoard</h3>
-            <p>Creating a dashboard of your favourite type,then put it
-                to one of the dashboard group item for long-term observation</p>
-            <a class="btn btn-primary">Add Now</a>
+            <h3>Create Content</h3>
+                <p>Add one or more series to form
+                your special dashboard</p>
+            <a class="btn btn-primary">Add one series</a>
+        </section>
+        <section class="solid">
+            <h3>Finish</h3>
+            <p>Publish your dashboard since you have done</p>
+            <a class="btn btn-primary">Publish Now</a>
         </section>
     </aside>
 
+    <div class="content-left-main" name="dashboard-add" id="content-left-main">
+        <div class="left-content-title" name="dashboard-add" id="left-content-title">
 
+        </div>
+    </div>
 
 
 
